--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   <section id="about">
     <h2>About Mikey</h2>
-    <p>I'm Mikey, a passionate photographer from [Your City]. I've been capturing unforgettable moments for over [X] years. From gritty street scenes to polished portraits, my work tells stories through light and lens.</p>
+    <p>I'm Mikey, a passionate photographer from Pomona. I've been capturing unforgettable moments for over 4 years. From gritty street scenes to polished portraits, my work tells stories through light and lens.</p>
   </section>
 
   <section id="contact">
